# pdmdemo

./: README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml  github-actions-demo.yml
src/pdmdemo/: main.py
tests/: test_simplesum.py
