[project]
name = "pdmdemo"
version = "0.1.0"
description = "demodemodemo"
authors = [
    {name = "demoname", email = "demoemail"},
]
dependencies = [
    "numpy>=2.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
]
